metadata/force-app/main/default/objects/CustomName_bHfdZ__c/CustomName_bHfdZ__c.object-meta.xml
<CustomObject>
    <description>Description_dgFfi</description>
    <label>CustomLabel_bfUEQ</label>
    <nameField>
        <label>CustomLabel_bfUEQ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_bfUEQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>