metadata/force-app/main/default/objects/CustomName_bHfdZ__c/fields/CustomField_bZgzG__c.field-meta.xml
<CustomField>
    <fullName>CustomField_bZgzG__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvQouS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>